# colony

./: README.md
.github/workflows/: ota-e2e.yml
ansible/: cleanup.yml  orchestrate.yml  provision.yml
ansible/tasks/: chown-theia.yml  config-override.yml  etcd.yml  install-mender.yml  install-ota-modules.yml  install-runtime-s3.yml  install-supervisor-unit.yml  seed-config.yml  stage-release.yml  tipc-bearer.yml
ansible/templates/: theia-supervisor.service.j2
api/: Dockerfile  README.md  pyproject.toml
api/colony_api/: __init__.py  app.py  registry.py  runner.py
docs/ci/: ota-e2e.md  wiki-Home.md
test/ota-e2e/: Dockerfile.board  Dockerfile.controller  README.md  build-artifacts.sh  docker-compose.migration.yml  docker-compose.yml  run-e2e.sh  run-full-story.sh  run-migration-e2e.sh
test/ota-e2e/helpers/: board-config.py  build-broken.sh  check-observability.sh  deb-to-mender.sh  group-and-deploy.sh  push-runtime-s3.sh  rf-audit.sh  stamp-version.sh  ucm-drive.py
test/ota-e2e/keys/: .gitignore
test/ota-e2e/registry/: central.yml  compute.yml
